--- a/src/main/resources/templates/admin/tags.html
+++ b/src/main/resources/templates/admin/tags.html
@@ -5,21 +5,68 @@
 <body>
 <nav th:replace="fragments::navbar"></nav>
 
-<div class="container">
-    <form method="post">
-        <label>Tag Name:
-            <input type="text" th:field="${tag.name}">
-        </label>
-        <p th:errors="${tag.name}"></p>
-        <button>Submit</button>
-    </form>
-    <h1>Tags</h1>
-    <ul th:unless="${#lists.isEmpty(tags)}">
-        <li th:each="tag : ${tags}" th:text="${tag.name}"></li>
-    </ul>
-    <h2 th:if="${#lists.isEmpty(tags)}">No tags added yet. Add a tag from the form above.</h2>
+<section class="logged-in-section" style="height: 93vh">
+    <div class="container py-5 h-100">
+        <div class="row  justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                <div class="card list-card text-white shadow-lg" style="border-radius: 1rem;">
+                    <h1 class="text-black p-4" th:text="${title}"></h1>
+                    <div class="card-body col-10 col-md-7 col-lg-9 col-xl-9  p-2 text-center">
+                        <div class=" mb-md-2 mt-3 ">
+                            <form class="text-black" method="post">
+                                <div class="form-outline form-black  mb-0">
+                                    <input type="text" id="tagName" class="form-control form-control-lg "
+                                           th:field="${tag.name}">
+                                    <label class="form-label" for="tagName">Tag Name:</label>
+                                    <div class="form-notch">
+                                        <div class="form-notch-leading" style="width: 9px;"></div>
+                                        <div class="form-notch-middle" style="width: 65px;"></div>
+                                        <div class="form-notch-trailing"></div>
+                                    </div>
+                                </div>
 
-</div>
+                                <div class="form-outline mb-0 mt-2">
+                                    <span th:errors="${tag.name}"
+                                          class="error_span text-danger justify-content-end "></span>
+                                </div>
+                                <button class="btn btn-outline-dark mt-4 btn-sm px-5">Add</button>
+                            </form>
+                            <p th:if="${#lists.isEmpty(tags)}" class="text-black">No tags added yet. Add a tag from the form above.</p>
+                            <div th:unless="${#lists.isEmpty(tags)}">
+                                <h3 class="text-black p-4">Tags:</h3>
+                                <th:block th:each="tag : ${tags}">
+                                    <button type="button" class="btn btn-primary mb-2" th:text="${tag.name}"></button>
+                                </th:block>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        const inputs = document.querySelectorAll("input");
+
+
+
+        inputs.forEach(e => {
+            if (e.value) {
+                e.classList.add('active');
+            }
+        });
+
+        inputs.forEach(el => {
+            el.addEventListener('blur', e => {
+                if (e.target.value) {
+                    e.target.classList.add('active');
+                } else {
+                    e.target.classList.remove('active')
+                }
+            })
+        });
+    </script>
+</section>
 
 </body>
 </html>
