--- a/src/main/resources/templates/tasks/default.html
+++ b/src/main/resources/templates/tasks/default.html
@@ -19,6 +19,7 @@
                                 <tr>
                                     <th scope="col">Name</th>
                                     <th scope="col">Estimated time</th>
+                                    <th scope="col">Priority</th>
                                     <th scope="col"></th>
                                 </tr>
                                 </thead>
@@ -27,8 +28,6 @@
                                     <td th:text="${defaultTask.name}"></td>
                                     <td th:text="${defaultTask.timeRequired}"></td>
                                     <td><select th:replace="fragments :: selectPriority"></select></td>
-                                    <td>
-                                    <td>
                                     <td>
                                         <form method="post" action="/tasks/convert-default-task">
                                             <input type="hidden" name="id" th:value="${defaultTask.id}">
