Created a fragment that displays the current due date of a task.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -107,5 +107,6 @@
 <span th:fragment="displayTask" th:text="${task.name}"></span>
 <span th:fragment="displayPriority" th:text="${task.priority}"></span>
 <span th:fragment="displayRequiredTime" th:text="|(${task.timeRequired} minutes)|"></span>
+<span th:fragment="displayDueDate" th:text="${{task.dueDate}}"></span>
 </body>
 </html>
