--- a/src/main/resources/templates/tasklist/generator.html
+++ b/src/main/resources/templates/tasklist/generator.html
@@ -425,7 +425,18 @@
                                                     </div>
                                                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                                                         <div class="card-body">
-                                                            And lastly, the placeholder content for the third and final accordion panel. This panel is hidden by default.
+                                                            <div class="container">
+                                                                <div class="row" style="text-align:start!important;"
+                                                                     th:each="task : ${sortPriority}">
+                                                                    <div class="form-check">
+                                                                        <input class="form-check-input" type="checkbox" name="taskIds"
+                                                                               th:value="${task.id}" th:id="|${task.id}-suggestedByDueDate|">
+                                                                        <label class="form-check-label" th:for="|${task.id}-suggestedByDueDate|"
+                                                                               th:text="|${task.name} - Priority: ${task.priority} - Due date: ${#dates.format(task.getDueDate(), 'dd/MM/yyyy')}|">
+                                                                        </label>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
                                                         </div>
                                                     </div>
                                                 </div>
