--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,28 +1,23 @@
+<th:block th:fragment="header">
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 
-<head th:fragment="head">
+<head>
+    <title th:text="|Life Organizer - ${title}|"></title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet"
-          href="https://mdbcdn.b-cdn.net/wp-content/themes/mdbootstrap4/docs-app/css/dist/mdb5/standard/core.min.css">
-    <script src="https://mdbcdn.b-cdn.net/wp-content/themes/mdbootstrap4/docs-app/js/dist/main.min.js"></script>
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
-          integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-            crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF"
-            crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" th:href="@{/css/styles.css}">
-    <title>Document</title>
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap-icons/1.8.1/font/bootstrap-icons.css}">
+    <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}">
+    <link th:rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
+</th:block>
+
+<th:block th:fragment="footer">
+</body>
+</html>
+</th:block>
 
 
 <nav class=" navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar">
@@ -108,5 +103,3 @@
 <span th:fragment="displayPriority" th:text="${task.priority}"></span>
 <span th:fragment="displayRequiredTime" th:text="|(${task.timeRequired} minutes)|"></span>
 <span th:fragment="displayDueDate" th:text="${{task.dueDate}}"></span>
-</body>
-</html>
