--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,10 +1,10 @@
 html,
 body {
-    height: 100%;
+    height: 100vh;
 }
 
 .signin-container {
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     padding-top: 40px;
