--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,3 +1,5 @@
+<th:block th:fragment="appName">Life Organizer</th:block>
+
 <th:block th:fragment="header">
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
@@ -9,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap-icons/1.8.1/font/bootstrap-icons.css}">
     <link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}">
+    <script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.bundle.js}"></script>
     <link th:rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
 <body>
@@ -19,77 +22,67 @@
 </html>
 </th:block>
 
+<th:block th:fragment="brandLogo"><i class="bi bi-calendar-plus"></i></th:block>
 
-<nav class=" navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar">
-    <div class=" row col-sm-12 col-md-12 col-lg-8 col-sl-12  p-0" style="margin: auto">
-        <a class="col-sm-11 col-md-11 col-lg-3 col-xl-3 m-0 p-0 navbar-brand" href="#">Life Organizer</a>
-        <button class=" col-sm-1 col-md-1 p-0 navbar-toggler" type="button" data-toggle="collapse"
-                data-target="#navbarContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<th:block th:fragment="navbar">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Navigation">
+    <div class="container">
+        <a class="navbar-brand" href="/">
+            <th:block th:insert="fragments :: brandLogo"></th:block>
+            <th:block th:insert="fragments :: appName"></th:block>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
-        <div class="col-sm-2 col-lg-9 col-xl-9 col collapse navbar-collapse p-0" id="navbarContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" th:href='@{/}'>Home</a>
+        <div class="navbar-collapse collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/}">Home</a>
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="taskDropdown" role="button" data-toggle="dropdown"
-                       aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Task
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="taskDropdown">
-                        <a class="dropdown-item" th:href="@{/tasks/create}">Create</a>
-                        <a class="dropdown-item" th:href="@{/tasks/default}">Add tasks from default</a>
-                        <a class="dropdown-item" th:href="@{/tasks}">View all</a>
-                    </div>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/tasks/create}">Create</a></li>
+                        <li><a class="dropdown-item" th:href="@{/tasks}">View all</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" th:href="@{/tasks/default}">Add tasks from default</a></li>
+                    </ul>
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="taskListDropdown" role="button"
-                       data-toggle="dropdown"
-                       aria-expanded="false">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Task List
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="taskListDropdown">
-                        <a class="dropdown-item" th:href="@{/tasklist/generator}">Create</a>
-                        <a class="dropdown-item" th:href="@{/tasklist/}">View all</a>
-                    </div>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="profileDropdown" role="button"
-                       data-toggle="dropdown"
-                       aria-expanded="false">
-                        Profile
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="profileDropdown">
-                        <a class="dropdown-item" th:href="@{/profile}">View</a>
-                        <a class="dropdown-item" th:href="@{/profile/options}">Options</a>
-                        <a class="dropdown-item" th:href="@{/logout}">Sign out</a>
-                    </div>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/tasklist/generator}">Create</a></li>
+                        <li><a class="dropdown-item" th:href="@{/tasklist/}">View all</a></li>
+                    </ul>
                 </li>
 
-                <th:block th:if="${user} and ${user.admin}">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="AdminDropdown" role="button"
-                           data-toggle="dropdown"
-                           aria-expanded="false">
-                            Admin
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="AdminDropdown">
-                            <a class="dropdown-item" th:href="@{/admin/default-create}">Create default task</a>
-                            <a class="dropdown-item" th:href="@{/admin/tags}">Create Tags</a>
-                            <!--                  <a class="dropdown-item" th:href="@{/logout}"></a>-->
-                        </div>
-                    </li>
-                </th:block>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <th:block th:text="${user.admin} ? 'Admin' : 'Profile'"></th:block>
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" th:href="@{/profile}">View Profile</a></li>
+                        <li><a class="dropdown-item" th:href="@{/profile/options}">Edit Profile</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <th:block th:if="${user.admin}">
+                            <li><a class="dropdown-item" th:href="@{/admin/default-create}">Create default task</a></li>
+                            <li><a class="dropdown-item" th:href="@{/admin/tags}">Create Tags</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                        </th:block>
+                        <li><a class="dropdown-item" th:href="@{/logout}">Sign out</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
 </nav>
-
+</th:block>
 
 <select th:name="priority" th:fragment="selectPriority">
     <option th:each="tp: ${T(org.launchcode.lifeorganizer.models.TaskPriority).values()}" th:value="${tp}" th:text="${tp}"></option>
